# nl-mirror

./: README.md
.github/workflows/: release_nl_mirror.yml
nl-android/: .gitignore  build.gradle.kts  gradlew  settings.gradle.kts
nl-android/src/main/: AndroidManifest.xml
nl-android/src/main/java/dev/nl/mirror/audio/: AudioCapture.kt  AudioConfig.kt  AudioEncoder.kt  (+1 more)
nl-host/: .gitignore  Cargo.toml
nl-host/src/: lib.rs  main.rs
nl-host/src/audio/: decoder.rs  mod.rs  playback.rs  receiver.rs
nl-host/src/core/: app.rs  config.rs  frame.rs  logger.rs  mod.rs
nl-host/src/input/: handler.rs  keymap.rs  mod.rs
nl-host/src/network/: control.rs  mod.rs  stream.rs
nl-host/src/utils/: mod.rs  screenshot.rs
nl-host/src/video/: decoder.rs  mod.rs  pipeline.rs  renderer.rs  shader.wgsl
nl-ios/: README.md  ios_control.py  qr_handshake.py  test_connection.sh  view_stream.sh
nl-ios/BroadcastExtension/: BroadcastExtension.entitlements  H264Encoder.swift  Info.plist  SampleHandler.swift
nl-ios/Shared/: SharedBuffer.swift
nl-ios/nl-ios/: AppDelegate.swift  Info.plist  MirrorServer.swift  NetworkUtils.swift  QRScannerViewController.swift  StreamForwarder.swift  ViewController.swift  nl-ios.entitlements
nl-ios/nl-ios.xcodeproj/: project.pbxproj
nl-ios/nl-ios.xcodeproj/project.xcworkspace/xcuserdata/nghinguyen.xcuserdatad/: UserInterfaceState.xcuserstate
nl-ios/nl-ios.xcodeproj/xcuserdata/nghinguyen.xcuserdatad/xcschemes/: xcschememanagement.plist
nl-launcher/: index.html  package-lock.json  package.json
nl-launcher/scripts/: fetch-binaries.sh  update-binaries.sh
nl-launcher/src/: App.css  App.tsx
nl-launcher/src-tauri/: Cargo.toml  tauri.conf.json
nl-launcher/src-tauri/binaries/: nl-mirror.apk
nl-launcher/src-tauri/capabilities/: default.json
nl-launcher/src-tauri/icons/: icon.icns
nl-launcher/src-tauri/src/: adb.rs  launcher.rs  lib.rs  main.rs  network.rs  tray.rs
nl-launcher/src/components/: ApkDropZone.tsx  DeviceList.tsx  KeyboardShortcuts.tsx  MirrorControls.tsx  QRCodeConnect.tsx  ServerManager.tsx  WiFiConnect.tsx
nl-launcher/src/components/ui/: CustomSelect.tsx
(+20 files in other folders)
