[package]
name = "nl-host"
version = "0.1.0"
edition = "2021"

[lib]
name = "nl_host"
path = "src/lib.rs"

[[bin]]
name = "nl-host"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
openh264 = "0.8"
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
winit = "0.30"
protobuf = "3.3"
bytes = "1.5"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
arboard = "3.4"
image = "0.24"
chrono = "0.4"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"

# Audio streaming
cpal = "0.15"
symphonia = { version = "0.5", features = ["aac"] }
