[package]
name = "nl-mirror"
version = "0.1.0"
description = "High-fidelity Android Streaming & Control"
authors = ["nghinv"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nl_mirror_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "image"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "full"] }
local-ip-address = "0.6.8"
socket2 = "0.5"

# Video/Graphics dependencies (from nl-host)
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
openh264 = "0.8"
crossbeam-channel = "0.5"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
arboard = "3.4"
image = "0.24"
chrono = "0.4"
dirs = "4.0"
protobuf = "3.3"
bytes = "1.5"
raw-window-handle = "0.6"

